--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,7 +29,7 @@ $pastels: (
   "pastel-blue-700": #1e88e5,
   "pastel-blue-800": #1976d2,
   "pastel-blue-900": #1565c0,
-  "specific-color": #289DC5,
+  "header-color": #289DC5,
 
   "pastel-red-100": #ffebee,
   "pastel-red-200": #ffcdd2,
