--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Aldrich&family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: "Aldrich", sans-serif;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh; /* Garante que o conteúdo ocupe a altura total da tela */
 }
 
 body {
@@ -12,6 +21,10 @@ body {
   background-repeat: no-repeat;
   height: 100vh;
   margin: 0;
+}
+
+main {
+  flex: 1; /* Faz o conteúdo principal ocupar o espaço restante */
 }
 
 .App {
