--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -7,7 +7,22 @@
 .aboutBtn {
   font-family: "Kodchasan", sans-serif;
   font-size: 1.2rem;
-  font-weight: bolder; 
+  font-weight: bolder;
+  background: linear-gradient(
+    90deg,
+    rgba(39, 157, 197, 1) 25%,
+    rgba(187, 80, 177, 1) 75%
+  );
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  text-decoration: none;
+}
+
+.moreBtn {
+  font-family: "Kodchasan", sans-serif;
+  font-size: 1.2rem;
+  font-weight: bolder;
   background: linear-gradient(
     90deg,
     rgba(39, 157, 197, 1) 25%,
