Starting about us page and members carousel

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,6 +30,7 @@ $pastels: (
   "pastel-blue-800": #1976d2,
   "pastel-blue-900": #1565c0,
   "header-color": #289DC5,
+  "more-color":#BB50B1,
 
   "pastel-red-100": #ffebee,
   "pastel-red-200": #ffcdd2,
