--- a/src/components/carousel/Carousel.module.css
+++ b/src/components/carousel/Carousel.module.css
@@ -24,18 +24,21 @@
 }
 
 .arrowStyle {
-    background: transparent;
-    border: none;
-    font-size: 2rem;
-    color: #ccc;
-    cursor: pointer;
-    z-index: 1;
-    width: 4rem;
-    height: 3rem;
-    align-items: center;
-    margin-right: 2rem;
+  background: transparent;
+  border: none;
+  font-size: 2rem;
+  color: #ccc;
+  cursor: pointer;
+  z-index: 1;
+  width: 4rem;
+  height: 3rem;
+  align-items: center;
+  margin-right: 2rem;
 }
 
-arrowContainerStyle {
-margin-top: 1rem;
+.arrowContainerStyle {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 10px;
 }
