--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -1,16 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Aldrich&family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
-.navbar {
+.text {
   font-family: "Kodchasan", sans-serif;
-  text-decoration: none;
-  color: white;
-}
-
-.header {
-  background: rgba(16, 16, 16, 0.5);
-  backdrop-filter: blur(10px);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
 }
