fixing the members carousel

--- a/src/components/memberCarousel/MemberCarousel.module.css
+++ b/src/components/memberCarousel/MemberCarousel.module.css
@@ -1,6 +1,7 @@
 .carouselContainer {
   display: flex;
   scroll-behavior: smooth; /* Suaviza a rolagem */
+  width: 1900px;
 }
 
 .arrowContainerStyle {
