--- a/src/components/carousel/Carousel.module.css
+++ b/src/components/carousel/Carousel.module.css
@@ -5,7 +5,7 @@
   width: 200px;
   margin: 0 10px;
   background: #2d2d2d;
-  border: 2px solid #ccc;
+  border: 4px solid #181532;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
