--- a/src/pages/Login/ForgotPassword.module.css
+++ b/src/pages/Login/ForgotPassword.module.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Aldrich&family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
-
 .loginContainer {
   width: 500px;
   height: 494px;
@@ -37,32 +35,6 @@
   border: 3px solid #279dc5;
 }
 
-.forgotPassword {
-  font-family: "Kodchasan", sans-serif;
-  text-decoration: none;
-  color: #fff;
-  font-size: 16px;
-  text-align: end;
-  margin-left: 7rem;
-}
-
-input[type="checkbox"] {
-  background-color: transparent !important;
-  color: white;
-}
-
-input[type="checkbox"]:enabled:checked {
-  background-color: #bb50b1 !important;
-  color: white;
-}
-
-.checkboxLabel {
-  font-family: "Kodchasan", sans-serif;
-  color: #fff;
-  font-size: 16px;
-  margin-left: 10px;
-}
-
 .button {
   font-family: "Kodchasan", sans-serif;
   width: 432px;
@@ -80,7 +52,23 @@ input[type="checkbox"]:enabled:checked {
 }
 
 .button:hover {
-    color: #000;
+  color: #000;
+}
+
+.warning {
+  font-family: "Kodchasan", sans-serif;
+  font-size: 6rem;
+  color: #4b4b4b;
+  border-left: 4px solid #4b4b4b;
+  margin-left: 2rem;
+
+}
+
+.warningText {
+    margin-top: 15px;
+  font-family: "Kodchasan", sans-serif;
+  font-size: 1rem;
+  text-align: start;
 }
 
 .text {
@@ -89,5 +77,5 @@ input[type="checkbox"]:enabled:checked {
 }
 
 .link {
-    font-family: 'Kodchasan', sans-serif;
+  font-family: "Kodchasan", sans-serif;
 }
