--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,17 @@ main {
 .text {
   font-family: "Kodchasan", sans-serif;
 }
+
+.navbar {
+  font-family: "Kodchasan", sans-serif;
+}
+
+.header {
+  background: rgba(16, 16, 16, 0.5);
+  backdrop-filter: blur(10px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
