--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@ main {
   border-radius: 5px;
   border: none;
   text-decoration: none;
+  color: black;
 }
 
 .carouselItemStyle {
@@ -251,4 +252,24 @@ input[type="checkbox"]:enabled:checked {
 
 .checkboxLabel {
   font-family: "Kodchasan", sans-serif;
+}
+
+.courseItem {
+  min-width: 300px;
+  width: 150px;
+  height: 300px;
+  margin: 0 10px;
+  background: #2d2d2d;
+  border: 4px solid #181532;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  flex-grow: auto;
+}
+
+.badge {
+  border: 4px solid #181532;
 }
