--- a/src/App.css
+++ b/src/App.css
@@ -273,3 +273,30 @@ input[type="checkbox"]:enabled:checked {
 .badge {
   border: 4px solid #181532;
 }
+
+.courseLogo {
+  min-width: 300px;
+  height: 344px;
+  width: 263px;
+  margin: 0 10px;
+  background: #2d2d2d;
+  border: 4px solid #181532;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  flex-grow: auto;
+}
+
+.playVideo {
+  width: 300px;
+  height: 150px;
+  background: #2d2d2d;
+  border: 4px solid #181532;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
