--- a/src/App.css
+++ b/src/App.css
@@ -181,3 +181,14 @@ input[type="checkbox"]:enabled:checked {
   background: #2d2d2d;
   border: 4px solid #181532;
 }
+
+.circular-progress {
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-weight: bold;
+}
