--- a/src/App.css
+++ b/src/App.css
@@ -192,3 +192,20 @@ input[type="checkbox"]:enabled:checked {
   color: #fff;
   font-weight: bold;
 }
+
+.questionBadge {
+  width: 1479px;
+  height: 500px;
+}
+
+.answerBadge {
+  width: 1479px;
+  height: 200px;
+  border: 4px solid #181532;
+}
+
+.answerBadge::placeholder {
+  color: #ffffff;
+  font-size: 20px;
+  font-family: "Kodchasan", sans-serif;
+}
