--- a/src/App.css
+++ b/src/App.css
@@ -209,3 +209,57 @@ input[type="checkbox"]:enabled:checked {
   font-size: 20px;
   font-family: "Kodchasan", sans-serif;
 }
+
+.video-container {
+  position: relative;
+  background-color: #1e1e1e;
+  border-radius: 10px;
+  overflow: hidden;
+  width: 1300px;
+}
+
+.video-player {
+  width: 100%;
+  display: block;
+}
+
+.video-controls {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 8px 12px;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.top-right-icons {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.icon-btn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+input[type="range"] {
+  height: 5px;
+  accent-color: white;
+}
+
+.volumeChange {
+  bottom: 300%;
+  right: -155%;
+  transform: rotate(-90deg);
+  width: 150px;
+  height: 30px;
+  appearance: none;
+  background: transparent;
+  cursor: pointer;
+}
+
