--- a/src/App.css
+++ b/src/App.css
@@ -263,10 +263,51 @@ input[type="range"] {
   cursor: pointer;
 }
 
-input, textArea {
+input,
+textArea {
   height: 250px;
 }
 
 .textArea::placeholder {
   color: white;
+}
+
+.sidebar {
+  background-color: #2c2c2c;
+  color: white;
+  width: 350px;
+  min-height: 100vh;
+  transition: width 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0;
+}
+
+.sidebar.collapsed {
+  width: 150px;
+}
+
+.top-section {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.toggle-btn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 1.5rem;
+}
+
+.icon-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 3rem;
+  font-size: 1.5rem;
 }
